# clientix

./: .gitlab-ci.yml  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
clientix/: Cargo.toml
clientix-codegen/: Cargo.toml
clientix-codegen/src/: arguments.rs  body.rs  client.rs  header.rs  lib.rs  method.rs  placeholder.rs  query.rs  return_kind.rs  segment.rs  utils.rs
clientix-codegen/src/method/: arguments.rs  body.rs  header.rs  method.rs  mod.rs  output.rs  placeholder.rs  query.rs  segment.rs
clientix-core/: Cargo.toml
clientix-core/src/: lib.rs  prelude.rs
clientix-core/src/client/: mod.rs  request.rs  response.rs  result.rs
clientix-core/src/client/asynchronous/: client.rs  mod.rs  request.rs  response.rs  stream.rs
clientix-core/src/client/asynchronous/stream/: mod.rs  sse.rs
clientix-core/src/client/blocking/: client.rs  mod.rs  request.rs  response.rs
clientix-core/src/core/: headers.rs
clientix-example/: Cargo.toml
clientix-example/src/: async_client.rs  blocking_client.rs  dto.rs  lib.rs
clientix/src/: lib.rs
