[workspace]
members = ["clientix", "clientix-codegen", "clientix-core", "clientix-example"]
resolver = "2"

[workspace.package]
version = "0.1.6"
categories = ["web-programming", "web-programming::http-client", "development-tools::procedural-macro-helpers"]
authors = ["Vladislav Ovchinnikov <vladovchinnikov950@gmail.com>"]

[workspace.dependencies]
clientix = { path = "clientix", version = "0.1.6" }
clientix-core = { path = "clientix-core", version = "0.1.6" }
clientix-codegen = { path = "clientix-codegen", version = "0.1.6" }