[package]
name = "clientix-codegen"
version.workspace = true
edition = "2021"
description = "The declarative HTTP-client"
homepage = "https://github.com/hexvl/clientix"
repository = "https://github.com/hexvl/clientix"
readme = "../README.md"
license = "MIT OR Apache-2.0"

[dependencies]
quote = "1.0.40"
syn = { version = "2.0.106", features = ["full"] }
clientix-core = { workspace = true }

[lib]
proc-macro = true