[package]
version.workspace = true
categories.workspace = true

name = "clientix-codegen"
edition = "2021"
description = "Library for building HTTP clients and requests declaratively with procedural macros - no need to write complex imperative or functional logic."
homepage = "https://github.com/hexvl/clientix"
repository = "https://github.com/hexvl/clientix"
readme = "../README.md"
license = "MIT OR Apache-2.0"

[dependencies]
quote = "1.0.40"
syn = { version = "2.0.106", features = ["full"] }
clientix-core = { workspace = true }

[lib]
proc-macro = true