[package]
version.workspace = true
categories.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true

name = "clientix-codegen"

[dependencies]
quote = "1.0.40"
syn = { version = "2.0.106", features = ["full"] }
clientix-core = { workspace = true }

[lib]
proc-macro = true