[package]
name = "clientix-core"
version = "0.0.2"
edition = "2021"
description = "The declarative HTTP-client"
homepage = "https://github.com/hexvl/clientix"
repository = "https://github.com/hexvl/clientix"
readme = "../README.md"
license = "MIT OR Apache-2.0"

[dependencies]
strfmt = "0.2.5"
reqwest = { version = "0.12.23", features = ["blocking", "stream"] }
thiserror = "2.0.16"
bytes = "1.10.1"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.143"
serde_urlencoded = "0.7.1"
base64 = "0.22.1"
http = "1.3.1"
encoding_rs = "0.8.35"
futures-core = "0.3.31"
futures-util = "0.3.31"