[package]
version.workspace = true
categories.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true

name = "clientix-core"

[dependencies]
strfmt = "0.2.5"
reqwest = { version = "0.12.23", features = ["blocking", "stream"] }
thiserror = "2.0.16"
bytes = "1.10.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_urlencoded = "0.7.1"
serde-xml-rs = "0.8.1"
base64 = "0.22.1"
http = "1.3.1"
encoding_rs = "0.8.35"
futures-core = "0.3.31"
futures-util = "0.3.31"