[package]
version.workspace = true
categories.workspace = true
authors.workspace = true

name = "clientix-example"
edition = "2021"
description = "Library for building HTTP clients and requests declaratively with procedural macros - no need to write complex imperative or functional logic."
homepage = "https://github.com/hexvl/clientix"
repository = "https://github.com/hexvl/clientix"
readme = "../README.md"
license = "MIT OR Apache-2.0"

[dependencies]
clientix = { workspace = true }
tokio = { version = "1.47.1", features = ["full"] }