[package]
version.workspace = true
categories.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

name = "clientix-example"

[dependencies]
clientix = { workspace = true }
tokio = { version = "1.47.1", features = ["full"] }