[package]
name = "clientix"
version.workspace = true
edition = "2021"
description = "The declarative HTTP-client"
homepage = "https://github.com/hexvl/clientix"
repository = "https://github.com/hexvl/clientix"
readme = "../README.md"
license = "MIT OR Apache-2.0"

[dependencies]
clientix-core = { path = "../clientix-core", workspace = true }
clientix-codegen = { path = "../clientix-codegen", workspace = true }