[package]
version.workspace = true
categories.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true

name = "clientix"

[dependencies]
clientix-core = { workspace = true }
clientix-codegen = { workspace = true }